# tree2cmd

./: .bumpversion.cfg  .flake8  .gitignore  Makefile  README.md  cmds.txt  filtered_logs.txt  filtter_log.py  full_logs.txt  mypy.ini  pyproject.toml  sample.txt  setup.py
.github/workflows/: bump.yml  publish.yml  python_tests.yml  testpypi.yml  tests.yml  tree2cmd_publish_test.yml
docs/: api.md  changelog.md  cli.md  contributing.md  faq.md  index.md  parser.md  usage.md
scripts/: build.sh
tests/: README.md  output.txt
tree2cmd/: __init__.py  parser.py
tree2cmd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
